# impact

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/: main.css
src/components/bullets/: BulletCard.tsx  BulletFormDialog.tsx  IMMEditor.tsx
src/components/jobs/: JobFormDialog.tsx  JobList.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/tags/: TagBadge.tsx  TagPicker.tsx
src/hooks/: useBullets.ts  useJobs.ts  useSessions.ts  useTags.ts
src/lib/: db.ts  utils.ts
src/stores/: appStore.ts
src/types/: index.ts
src/views/: CollectionsView.tsx  JobsView.tsx  MatchView.tsx
