[package]
name = "impact"
version = "0.1.0"
description = "Resume bullet bank manager"
authors = ["Christian Nickolaou"]
edition = "2021"

[lib]
name = "impact_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "impact"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
